limpieza de asistencia

--- a/src/templates/administracion/crear_curso.html
+++ b/src/templates/administracion/crear_curso.html
@@ -142,7 +142,11 @@
         <div class="form-row">
             <div class="form-group">
                 <label>Edad Mínima</label>
-                <input type="number" name="edad_minima" min="0" max="100" placeholder="Ej: 16">
+                <input type="number" name="edad_minima" min="0" max="100" placeholder="Ej: 6">
+            </div>
+            <div class="form-group">
+                <label>Edad Máxima</label>
+                <input type="number" name="edad_maxima" min="0" max="100" placeholder="Ej: 9">
             </div>
             <div class="form-group">
                 <label>Orden de Visualización</label>
