--- a/src/templates/administracion/panel_cursos.html
+++ b/src/templates/administracion/panel_cursos.html
@@ -146,7 +146,7 @@
                 <th>Orden</th>
                 <th>ID</th>
                 <th>Nombre del Curso</th>
-                <th>Edad Mínima</th>
+                <th>Edad (Rango)</th>
                 <th>Comisiones</th>
                 <th>Estado</th>
                 <th>Acciones</th>
@@ -167,8 +167,12 @@
                     <small style="color: #94a3b8;">{{ curso.descripcion|truncatewords:10 }}</small>
                 </td>
                 <td>
-                    {% if curso.edad_minima %}
-                        {{ curso.edad_minima }} años
+                    {% if curso.edad_minima and curso.edad_maxima %}
+                        {{ curso.edad_minima }} a {{ curso.edad_maxima }} años
+                    {% elif curso.edad_minima %}
+                        +{{ curso.edad_minima }} años
+                    {% elif curso.edad_maxima %}
+                        Hasta {{ curso.edad_maxima }} años
                     {% else %}
                         <span style="color: #94a3b8;">Sin restricción</span>
                     {% endif %}
