--- a/src/templates/landing.html
+++ b/src/templates/landing.html
@@ -832,6 +832,17 @@
                     </select>
                 </div>
 
+                <!-- Ciudad -->
+                <div class="form-group">
+                    <label>Ciudad *</label>
+                    <select name="ciudad" class="form-input" required>
+                        <option value="">Seleccione...</option>
+                        <option value="Ushuaia">Ushuaia</option>
+                        <option value="Rio Grande">Río Grande</option>
+                        <option value="Tolhuin">Tolhuin</option>
+                    </select>
+                </div>
+
                 <!-- Domicilio -->
                 <div class="form-group">
                     <label>Domicilio</label>
@@ -843,9 +854,12 @@
                     <label>Nivel de estudios</label>
                     <select name="nivel_estudios" class="form-input">
                         <option value="">Seleccione...</option>
-                        <option value="PR">Primaria</option>
-                        <option value="SE">Secundaria</option>
-                        <option value="UN">Universidad</option>
+                        <option value="PI">Primaria Incompleto</option>
+                        <option value="PR">Primaria Completo</option>
+                        <option value="SI">Secundaria Incompleto</option>
+                        <option value="SE">Secundaria Completo</option>
+                        <option value="UI">Universidad Incompleto</option>
+                        <option value="UN">Universidad Completo</option>
                         <option value="OT">Otro</option>
                     </select>
                 </div>
