--- a/src/templates/usuario/mi_progreso.html
+++ b/src/templates/usuario/mi_progreso.html
@@ -8,8 +8,8 @@
 <li><a href="{% url 'cursos:mis_inscripciones' %}"> Mis Inscripciones</a></li>
 <li><a href="{% url 'usuario:gestionar_tutores' %}"> Mis Tutores</a></li>
 <li><a href="{% url 'usuario:mi_progreso' %}" class="active"> Mi Progreso</a></li>
-<li><a href="{% url 'usuario:mis_certificados' %}"> Certificados</a></li>
-<li><a href="{% url 'usuario:materiales_estudiante' %}"> Materiales</a></li>
+{# <li><a href="{% url 'usuario:mis_certificados' %}"> Certificados</a></li> #}
+{# <li><a href="{% url 'usuario:materiales_estudiante' %}"> Materiales</a></li> #}
 <li><a href="{% url 'usuario:mi_perfil' %}"> Mi Perfil</a></li>
 {% endblock %}
 
